# graphql-http

./: .coverage  .gitignore  AGENTS.md  Pipfile  README.md  example.graphql  pyproject.toml  setup.cfg  test_auto_discovery.py  test_cwd_issue.py  test_html_output.py  test_logging.py  test_server.py
.github/workflows/: pages.yml  python-package.yml
docs/: hugo.toml
docs/content/: _index.md
docs/content/docs/: _index.md  api-reference.md  authentication.md  configuration.md  examples.md  getting-started.md
examples/: README.md  advanced_server.py  auth_server.py  basic_server.py  graphql_api_server.py
graphql_http/: error.py  helpers.py  introspection.py  server.py
graphql_http/graphiql/: index.html
graphql_http_server/: auth.py  helpers.py  server.py
graphql_http_server/graphiql/: index.html
tests/: app copy.py  app.py  conftest.py  test_app.py  test_auth.py  test_cors.py  test_examples.py  test_federation.py  test_graphql_api.py  test_introspection.py  test_server.py  test_sse.py
