[project]
name = "graphql_http"
dynamic = ["version"]
description = "HTTP Server for GraphQL."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Robert Parker", email = "rob@parob.com"}
]
keywords = ["GraphQL", "HTTP", "Server", "starlette"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "graphql-core>=3.2.0",
    "graphql-api>=1.3.0",
    "packaging>=21.3",
    "graphql-schema-diff>=1.2.4",
    "pyjwt[crypto]==2.7.0",
    "starlette",
    "uvicorn",
    "python-multipart",
    "httpx",
]

[project.urls]
Homepage = "https://gitlab.com/parob/graphql-http"
Repository = "https://gitlab.com/parob/graphql-http"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "coverage",
    "graphql-api",
    "flake8",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.python.org/simple"

[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["graphql_http"]
include-package-data = true

[tool.setuptools.package-data]
graphql_http = [
    "graphiql/index.html",
    "service/service_manager_default.graphql"
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
exclude = [".venv"]
